# OpenAI-APIs

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
app/: config.py  main.py  schemas.py
app/agent/: diagnosis.py  executor.py  loop.py  memory.py  models.py  policy.py  runbooks.py  verifier.py
app/connectors/: chatops.py  k8s.py  observability.py
tests/: test_loop.py  test_policy.py
